# sos-matlab

./: .gitignore  .travis.yml  MANIFEST.in  README.md  converter.py  pyproject.toml  setup.py  sos_py_repr.sce
src/sos_matlab/: _version.py  actions.py  converter.py  kernel.py  sos_load_obj.m  sos_py_repr.m
test/: conftest.py  test_Matlab_action.py  test_Matlab_kernel.py  test_Octave_action.py  test_Octave_kernel.py  test_converter.py  test_matlab_data_exchange.py  test_matlab_interface.py  test_octave_data_exchange.py  test_octave_interface.py
