[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sos-matlab"
version = "0.1.6"
description = "SoS Notebook extension for MATLAB and Octave"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "3-clause BSD"}
authors = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
maintainers = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "sos>=0.18.0",
    "sos-notebook>=0.24.0",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/vatlab/SOS"
Repository = "https://github.com/vatlab/sos-matlab"
"Bug Tracker" = "https://github.com/vatlab/sos-matlab/issues"

[project.entry-points."sos_languages"]
"MATLAB" = "sos_matlab.kernel:sos_MATLAB"
"Octave" = "sos_matlab.kernel:sos_MATLAB"

[project.entry-points."sos_converters"]
"m-ipynb" = "sos_matlab.converter:OctaveToNotebookConverter"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.tpl", "*.png", "*.css", "*.j2", "*.json"]
